# cocoaspot

./: README.md
clibrespot/: Cargo.toml  Makefile  clibrespot.h
clibrespot/src/: lib.rs  player.rs  store.rs
cocoaspot/cocoaspot/: AppController.h  AppController.m  AppDelegate.h  AppDelegate.m  clibrespot.h  main.m
cocoaspot/cocoaspot.xcodeproj/: project.pbxproj
cocoaspot/cocoaspot.xcodeproj/xcshareddata/xcschemes/: cocoaspot.xcscheme
cocoaspot/cocoaspot.xcodeproj/xcuserdata/sammoore.xcuserdatad/xcschemes/: xcschememanagement.plist
cocoaspot/cocoaspot/Base.lproj/: MainMenu.xib
cocoaspot/cocoaspotTests/: cocoaspotTests.m
cocoaspot/cocoaspotUITests/: cocoaspotUITests.m  cocoaspotUITestsLaunchTests.m
