[package]
name = "clibrespot"
version = "0.1.0"
edition = "2021"

[lib]
name = "clibrespot"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ffi = "0.5.0"
ffi_helpers = "0.3.0"
librespot = "0.4.2"
redux-rs = { version = "0.3.3", features = ["middleware_logger", "middleware_thunk"] }
tokio = "1.35.1"

[patch.crates-io]
getrandom = { git = "https://github.com/paradigmpost/getrandom-legacy-macos.git" }
